# code-conductor

./: .gitignore  README.md  findings.md  progress.md  project.md  pyproject.toml  server.py  task_plan.md
.claude/: ralph-loop.local.md
docs/: security-audit.md
docs/plans/: 2026-03-13-deferred-features-design.md  2026-03-13-frontend-mvp-design.md  2026-03-13-frontend-mvp.md  2026-03-13-production-readiness-design.md  2026-03-13-production-readiness.md
src/conductor/agents/: __init__.py  gemini_provider.py  kimi_provider.py  llm_provider.py  master_agent.py
src/conductor/api/: __init__.py  chat.py  deps.py  memory.py  plans.py  sessions.py  threads.py  voice.py  websockets.py
src/conductor/core/: config.py  constants.py  models.py
src/conductor/managers/: __init__.py  backup_manager.py  conflict_resolver.py  git_manager.py  memory_manager.py  plan_manager.py  queue_manager.py  session_dispatcher.py  session_manager.py  symlink_strategy.py  thread_manager.py  (+1 more)
tests/: test_api_memory.py  test_api_plans.py  test_api_sessions.py  test_api_threads.py  test_api_voice.py  test_api_websockets.py  test_backup_manager.py  test_conflict_resolver.py  test_e2e_integration.py  test_git_manager.py  test_health.py  test_llm_providers.py  test_master_agent_full.py  test_memory_manager.py  test_plan_manager.py  test_queue_manager.py  test_session_dispatcher.py  test_session_manager.py  test_thread_manager.py  test_worker_runner.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: manifest.json  sw.js
web/src/: App.tsx  globals.css  main.tsx
(+21 files in other folders)
